fix(styles): remove extra margin from the first label in vertical layout form [ci visual]

--- a/src/styles/form-layout-grid.scss
+++ b/src/styles/form-layout-grid.scss
@@ -40,7 +40,7 @@ $groupGutter: 1rem;
     }
   }
 
-  .#{$gridContainer}.#{$blockContainer}--vertical .#{$gridRow} {
+  .#{$gridContainer}.#{$blockContainer}--vertical .#{$gridRow}:not(:first-child) {
     .#{$colSelector},
     .#{$colSelector}--12 {
       .#{$fd-namespace}-form-label {
